--- a/ansible/roles/deploy/security_groups/tasks/main.yml
+++ b/ansible/roles/deploy/security_groups/tasks/main.yml
@@ -22,6 +22,22 @@
     port_range_max: 443
     remote_ip_prefix: "{{ http_remote_ip_prefix }}"
 
+# ----------
+# SSH
+# ----------
+- name: "Ensure SSH Security Group"
+  openstack.cloud.security_group:
+    name: ssh_access
+    description: "SSH Access"
+    state: present
+- name: "Ensure SSH access in ssh_access security group"
+  openstack.cloud.security_group_rule:
+    security_group: ssh_access
+    protocol: tcp
+    port_range_min: 22
+    port_range_max: 22
+    remote_ip_prefix: "{{ http_remote_ip_prefix }}"
+
 # -------------------------------------------------    
 # HTTP/HTTPS For Testing (Access from NRM and SNIC)
 # -------------------------------------------------
