--- a/ansible/roles/storage/docker_storage/tasks/main.yml
+++ b/ansible/roles/storage/docker_storage/tasks/main.yml
@@ -1,23 +1,24 @@
 # Note! This role is dependent on the role: 'lvm_volume_group'
 - debug:
-    msg: "{{ (lvm_device_info.disk.size | int / 900) | int }}"
+    msg: "{{ (lvm_device_info.disk.size | int / 800) | int }}"
     
 - name: Create a thin lvm pool for storage of Docker config and volumes (tp_docker)
   community.general.lvol:
     vg: vg_docker
     thinpool: tp_docker
-    size: 90%VG
-- name: "Create a {{(lvm_device_info.disk.size | int / 900) | int }}G thin lvm volume for storage of Docker config and volumes (tlv_docker)"
+    size: 80%VG
+    opts: --chunksize 1280k --poolmetadatasize 15G --zero n
+- name: "Create a {{(lvm_device_info.disk.size | int / 800) | int }}G thin lvm volume for storage of Docker config and volumes (tlv_docker)"
   community.general.lvol:
     vg: vg_docker
     lv: tlv_docker
     thinpool: tp_docker
-    size: "{{(lvm_device_info.disk.size | int / 900)  | int }}G"
+    size: "{{(lvm_device_info.disk.size | int / 800)  | int }}G"
 - name: Format the thin volume for docker data with xfs
   community.general.filesystem:
     fstype: xfs
     dev: /dev/vg_docker/tlv_docker
-    opts: -i size=512
+    opts: -i size=512 -n size=8192
 - name: Create export mount point /export/docker
   file:
     path: /export/docker
@@ -30,5 +31,6 @@
   ansible.posix.mount:
     src: /dev/vg_docker/tlv_docker
     fstype: xfs
+    opts: inode64,noatime,nodiratime
     path: /export/docker
     state: mounted
