--- a/ansible/storage.yml
+++ b/ansible/storage.yml
@@ -21,6 +21,8 @@
     - name: "Register info about all volumes"
       openstack.cloud.volume_info:
       register: volume_info
+  tags:
+  - volume_info
       
 - name: "Setup Gluster backed Docker storage on storage nodes"
   hosts: storage
@@ -63,13 +65,13 @@
   - role: roles/storage/docker_gluster_volume
     
 - name: "Setup Gluster Clients on all swarm nodes that are not also backends" 
-  hosts: docker_swarm:!storage
+  hosts: storage
   become: true
   roles:
   - role: roles/storage/gluster_client
     
 - name: "Ensure Gluster backed Docker data access on all swarm nodes"
-  hosts: docker_swarm
+  hosts: storage
   become: true
   roles:
   - role: roles/storage/docker_data_access
@@ -102,7 +104,8 @@
     - name: "Setup *local* storage for Docker data on {{ local_docker_storage_device }}"
       include_role:
         name: roles/storage/local_docker_storage
-        
+  tags:
+  - local_docker_storage
 
 
 # http://manpages.ubuntu.com/manpages/xenial/man7/lvmthin.7.html
