--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -6,6 +6,13 @@
   tags:
     - security_groups
 
+#- name: Ensure Server Groups
+#  hosts: localhost
+#  roles:
+#    - roles/deploy/server_groups
+#  tags:
+#    - server_group
+
 - name: Ensure Internal Network
   hosts: localhost
   roles:
@@ -52,7 +59,7 @@
         security_groups: "{{ security_groups | union(['vpn_access']) }}" 
   tags:
     - hosts
-        
+
 - name: List security groups
   hosts: gateways + servers
   tasks:
@@ -61,7 +68,6 @@
   tags:
     - hosts
 
-    
 #
 # Deploy all hosts, set internal and external ips, security groups and attach storage 
 #
@@ -69,7 +75,7 @@
 - name: Deploy Hosts
   hosts: localhost
   tasks:
-    
+
     #
     # Internal IPs
     #
@@ -81,17 +87,17 @@
         fixed_ips:
           - ip_address: "{{ hostvars[item]['common_ip_part'] }}{{ hostvars[item]['nbr'] }}"
         extra_dhcp_opts:
-          - "ip_version=4,opt_name=mtu, opt_value={{ internal_network_mtu }}"    
+          - "ip_version=4,opt_name=mtu, opt_value={{ internal_network_mtu }}"
       with_items: "{{ groups['gateways'] + groups['servers'] }}"
       tags:
         - hosts
         - hosts_internal_ips
-      
+
     #
     # Deploy Hosts
     #
     # Note! There is a bug: security groups are not addedd if not done twice...
-    
+
     - name: "Ensure that hosts are deployed"
       openstack.cloud.server:
         name: "{{ deployment_prefix }}-{{ item }}"
@@ -103,25 +109,29 @@
           - port-name: "port_of_{{ deployment_prefix }}-{{ item }}"
         key_name: "{{ lookup('env','USER') }}_key"
         security_groups: "{{ hostvars[item]['security_groups'] }}"
+#        scheduler_hints:
+#          group: "{{ hostvars[item]['server_group'] }}"
       with_items: "{{ groups['servers'] +  groups['gateways'] }}"
       tags:
         - hosts
 
-    # - name: "Repeat to ensure security groups for hosts are correct (Bugg workarround)"
-    #   openstack.cloud.server:
-    #     name: "{{ deployment_prefix }}-{{ item }}"
-    #     state: present
-    #     image: "{{server_image}}"
-    #     flavor: "{{ hostvars[item]['flavor'] }}"
-    #     auto_floating_ip: no
-    #     nics:
-    #       - port-name: "port_of_{{ deployment_prefix }}-{{ item }}"
-    #     key_name: "{{ lookup('env','USER') }}_key"
-    #     security_groups: "{{ hostvars[item]['security_groups'] }}"
-    #   with_items: "{{ groups['servers'] +  groups['gateways'] }}"
-    #   tags:
-    #     - hosts
-        
+    - name: "Repeat to ensure security groups for hosts are correct (Bugg workarround)"
+      openstack.cloud.server:
+        name: "{{ deployment_prefix }}-{{ item }}"
+        state: present
+        image: "{{server_image}}"
+        flavor: "{{ hostvars[item]['flavor'] }}"
+        auto_floating_ip: no
+        nics:
+          - port-name: "port_of_{{ deployment_prefix }}-{{ item }}"
+        key_name: "{{ lookup('env','USER') }}_key"
+        security_groups: "{{ hostvars[item]['security_groups'] }}"
+#        scheduler_hints:
+#          group: "{{ hostvars[item]['server_group'] }}"
+      with_items: "{{ groups['servers'] +  groups['gateways'] }}"
+      tags:
+        - hosts
+
     #
     # Attach storage to hosts
     #
@@ -158,7 +168,7 @@
         volume: "{{ deployment_prefix }}-{{ item }}-volume_local_docker"
         device: "{{ hostvars[item]['data_volume_device'] }}"
       with_items: "{{ groups['docker_swarm'] + groups['docker'] }}"
-#      when:  hostvars[item]['volume_local_docker'] is defined 
+      when:  hostvars[item]['local_docker_storage'] is defined
       tags:
         - hosts
         - hosts_storage
@@ -181,8 +191,3 @@
       tags:
         - hosts
         - hosts_floating_ips
-
-
- 
-  
-    
