--- a/ansible/roles/deploy/storage_volumes/tasks/main.yml
+++ b/ansible/roles/deploy/storage_volumes/tasks/main.yml
@@ -33,7 +33,7 @@
     size: "{{ (hostvars[item]['local_docker_storage'] | default(0) | int) + (hostvars[item]['var_lib_docker_storage'] | default(0) | int) + (hostvars[item]['backup_snapshot_storage'] | default(0) | int) }}"
     display_name: "{{ deployment_prefix }}-{{ item }}-volume_local_docker"
   with_items: "{{ groups['docker_swarm'] + groups['docker'] }}"
-  when:  hostvars[item]['volume_local_docker'] is defined
+#  when:  hostvars[item]['local_docker_storage'] is defined
   tags:
     - hosts_local_storage
       
